--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,3 +8,5 @@ crate-type = ["cdylib"]
 
 [dependencies]
 godot = { git = "https://github.com/godot-rust/gdext" }
+image = "0.25"
+image-atlas = "0.4"
