add simple agent system for npc behaviour

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib"]
 ahash = "0.8"
 godot = { git = "https://github.com/godot-rust/gdext" }
 image = "0.25"
-image-atlas = { git = "https://github.com/gossiperloturot/image-atlas" }
+image-atlas = "0.4"
+rand = "0.8"
 rstar = "0.12"
 slab = "0.4"
