--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,10 +8,11 @@ crate-type = ["cdylib"]
 
 [dependencies]
 ahash = "0.8"
-ecs-tiny = "0.1"
+ecs-tiny = "0.2"
 godot = { git = "https://github.com/godot-rust/gdext" }
 image = "0.25"
 image-atlas = "0.4"
 rand = "0.8"
 rstar = "0.12"
 slab = "0.4"
+strum_macros = "0.26"
