add test cases and fix code for {Tile,Block,Entity}Field

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -9,7 +9,7 @@ crate-type = ["cdylib"]
 [dependencies]
 ahash = "0.8"
 dyn-clone = "1.0"
-godot = { git = "https://github.com/godot-rust/gdext", tag = "v0.1.1" }
+godot = "0.1"
 image = "0.25"
 image-atlas = "0.4"
 rand = "0.8"
