--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -4,7 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["rlib", "cdylib"]
+
+[[bench]]
+name = "benchmark"
+harness = false
 
 [dependencies]
 ahash = "0.8"
@@ -14,3 +18,6 @@ image-atlas = "0.4"
 rand = "0.8"
 rstar = "0.12"
 slab = "0.4"
+
+[dev-dependencies]
+criterion = { version = "0.5", features = ["html_reports"] }
