--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -12,8 +12,10 @@ harness = false
 
 [dependencies]
 ahash = "0.8"
+enum_dispatch = "0.3"
+glam = "0.27"
 godot = "0.1"
-image = "0.25"
+image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
 image-atlas = "0.4"
 rand = "0.8"
 rstar = "0.12"
