--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -17,6 +17,7 @@ glam = "0.27"
 godot = "0.1"
 image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
 image-atlas = "0.4"
+noise = "0.9"
 rand = "0.8"
 rstar = "0.12"
 slab = "0.4"
