--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -12,7 +12,8 @@ harness = false
 
 [dependencies]
 ahash = "0.8"
-enum_dispatch = "0.3"
+downcast-rs = "2"
+dyn-clone = "1"
 glam = "0.28"
 godot = "0.2"
 image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
