--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -16,9 +16,9 @@ downcast-rs = "2"
 dyn-clone = "1"
 glam = "0.28"
 godot = "0.2"
-image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
+image = { version = "0.25", default-features = false }
 image-atlas = "0.4"
-rand = "0.9"
+rand = "0.8"
 rstar = "0.12"
 slab = "0.4"
 
